<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_album.CreateAlbumFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="Título crear album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_album" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/name"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí nombre del álbum" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coverTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="16dp"
        android:hint="@string/cover"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textCoverField"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí la url de la imagen cover" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/releaseDateTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="16dp"
        android:hint="@string/releaseDate"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textReleaseDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:contentDescription="Escriba aquí la fecha de lanzamiento" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="16dp"
        android:hint="@string/description"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí la descripción del album" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genreTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="360dp"
        android:layout_marginRight="16dp"
        android:hint="@string/genre"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textGenreField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí el género del álbum" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="16dp"
        android:hint="@string/label"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLabelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Escriba aquí el label" />

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTextInputLayout"
        app:layout_constraintVertical_bias="0.931">

        <Button
            android:id="@+id/saveAlbumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Botón guardar para almacenar el álbum"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/save" />


        <Button
            android:id="@+id/cancelSaveAlbumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Botón cancelar para no almacenar el álbum"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/cancel" />


    </LinearLayout>

    <!--    <EditText-->
<!--        android:id="@+id/Birthday"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="68dp"-->
<!--        android:clickable="false"-->
<!--        android:cursorVisible="false"-->
<!--        android:focusable="false"-->
<!--        android:focusableInTouchMode="false"-->
<!--        android:hint="asdf"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>