...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_stars_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_menu_collectors"
            android:title="@string/menu_albums" />
        <item
            android:id="@+id/nav_collectors"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/menu_collectors" />
...
